--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
 server.port=8080
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
 spring.messages.basename=lang.messages
 spring.web.resources.static-locations=classpath:/frontend/
 spring.thymeleaf.prefix=classpath:/frontend/
-#по умолчанию обслуживаются только data и schema
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=Lera
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.data=classpath:data.sql,classpath:authors.sql
 spring.datasource.schema=classpath:schema.sql
+spring.datasource.initialization-mode=always
+
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+##по умолчанию обслуживаются только data и schema
+#spring.datasource.data=classpath:data.sql,classpath:authors.sql
+#spring.datasource.schema=classpath:schema.sql
