--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,12 @@ spring.thymeleaf.prefix=classpath:/frontend/
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=Lera
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.data=classpath:data.sql,classpath:authors.sql
-spring.datasource.schema=classpath:schema.sql
+#spring.datasource.data=classpath:data.sql
 spring.datasource.initialization-mode=always
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
 
 #spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:testdb
