--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,12 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.data=classpath:data.sql
 spring.datasource.initialization-mode=always
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 
 #spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:testdb
