--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,4 @@ spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 ##по умолчанию обслуживаются только data и schema
 #spring.datasource.data=classpath:data.sql,classpath:authors.sql
 #spring.datasource.schema=classpath:schema.sql
+#pg_ctl -D "C:\Users\Lera\Documents\postgres\postgres" start
