--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,4 @@ spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 #spring.datasource.data=classpath:data.sql,classpath:authors.sql
 #spring.datasource.schema=classpath:schema.sql
 #pg_ctl -D "C:\Users\Lera\Documents\postgres\postgres" start
+upload.path=C:\\Users\\Lera\\Pictures
