--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.thymeleaf.prefix=classpath:/frontend/
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=Lera
 spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.data=classpath:data.sql
+spring.datasource.data=classpath:data.sql
 spring.datasource.initialization-mode=always
 
 spring.jpa.hibernate.ddl-auto=none
@@ -23,3 +23,4 @@ spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 #spring.datasource.schema=classpath:schema.sql
 #pg_ctl -D "C:\Users\Lera\Documents\postgres\postgres" start
 upload.path=C:\\Users\\Lera\\Pictures
+download.path=C:\\Users\\Lera\\Pictures\\book-files
