--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=Lera
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.data=classpath:data.sql
-spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=never
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
@@ -27,3 +27,6 @@ download.path=C:\\Users\\Lera\\Pictures\\book-files
 
 spring.security.user.name=admin
 spring.security.user.password=123
+
+auth.secret=skillbox
+server.servlet.session.tracking-modes=cookie
