--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,6 @@ spring.security.user.password=123
 
 auth.secret=skillbox
 server.servlet.session.tracking-modes=cookie
+
+spring.security.oauth2.client.registration.facebook.client-id=948164052709810
+spring.security.oauth2.client.registration.facebook.client-secret=1
