--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
 <!--			<version>1.4.200</version>-->
 <!--		</dependency>-->
 		<dependency>
+			<groupId>com.hazelcast</groupId>
+			<artifactId>hazelcast</artifactId>
+			<version>4.0.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 			<version>2.4.5</version>
