--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,5 +31,6 @@ spring.security.user.password=123
 auth.secret=skillbox
 server.servlet.session.tracking-modes=cookie
 
-spring.security.oauth2.client.registration.facebook.client-id=948164052709810
-spring.security.oauth2.client.registration.facebook.client-secret=1
+spring.security.oauth2.client.registration.google.client-id=382127071002-ujbc4msni40t9qqqhfqglfnnrqe2issk.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=1
+spring.security.oauth2.client.registration.google.scope=email,profile
