--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,5 +32,5 @@ auth.secret=skillbox
 server.servlet.session.tracking-modes=cookie
 
 spring.security.oauth2.client.registration.google.client-id=382127071002-ujbc4msni40t9qqqhfqglfnnrqe2issk.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=1
+spring.security.oauth2.client.registration.google.client-secret=${CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=email,profile
