--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -7,9 +7,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres-test
 spring.datasource.username=Lera
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.data=classpath:data.sql
-spring.datasource.initialization-mode=never
+spring.datasource.initialization-mode=always
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
