--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=Lera
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.data=classpath:data.sql
-spring.datasource.initialization-mode=never
+spring.datasource.initialization-mode=always
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
@@ -33,3 +33,10 @@ server.servlet.session.tracking-modes=cookie
 spring.security.oauth2.client.registration.google.client-id=382127071002-ujbc4msni40t9qqqhfqglfnnrqe2issk.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=${CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=email,profile
+
+twilio.ACCOUNT_SID=AC1933766106f20f3e20030d6478d00321
+twilio.AUTH_TOKEN=c528d86ae5d60d22296f0a6795df0990
+twilio.TWILIO_NUMBER=+14582245759
+
+appEmail.email=bookstore00@mail.ru
+appEmail.password=cd7s:fn/Z''7a{T
