--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,16 @@
 			<version>5.2.4.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>com.twilio.sdk</groupId>
+			<artifactId>twilio</artifactId>
+			<version>8.6.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>2.5.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
