--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,5 @@ twilio.TWILIO_NUMBER=+14582245759
 
 appEmail.email=bookstore00@mail.ru
 appEmail.password=cd7s:fn/Z''7a{T
+
+google.books.api.key=${GOOGLE_KEY}
