--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,3 +42,6 @@ appEmail.email=bookstore00@mail.ru
 appEmail.password=cd7s:fn/Z''7a{T
 
 google.books.api.key=${GOOGLE_KEY}
+
+robokassa.merchant.login=mybookshop
+robokassa.pass.first.test=G9NJ9SI50NhWxv4lQRKD
