--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,3 +45,6 @@ google.books.api.key=${GOOGLE_KEY}
 
 robokassa.merchant.login=mybookshop
 robokassa.pass.first.test=G9NJ9SI50NhWxv4lQRKD
+
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
